src/test/deca/context/invalid/created/SansObjet/WrongTypeAssign.deca
// Resultats :
//    Erreur contextuelle
//    Ligne 6

{
    boolean b = "aaa";
}